Fixed the padding and spacing for the footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,3 +27,7 @@
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
 }
+
+p {
+  margin-bottom: 0;
+}
